--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "sea-turtle-ui",
   "version": "0.1.0",
-  "private": true,
+  "description": "基于 vue-cli3 的 UI 组件库",
+  "main": "lib/sea-turtle-ui.umd.min.js",
+  "keywords": "sea-turtle-ui",
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name sea-turtle-ui --dest lib packages/index.js"
   },
   "dependencies": {
     "vue": "^2.6.6",
